# synth

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  FIX_VISUAL_STUDIO.md  README.md  WINDOWS_BUILD_HELP.md  build-fast.bat  build-mingw.bat  build.bat  check-vs-install.bat  generate-vs-project.bat
data/: randomization_config.json  sequencer_presets.json  sequencer_presets_system.json  synth_presets.json
include/: AcidVoice.h  DrumTab.h  FilterTab.h  MelodySequencerTab.h  ModulationTab.h  OscTab.h  PluginEditor.h  PluginProcessor.h  ProgressionTab.h  SequencerTab.h  SynthTab.h
source/: AcidVoice.cpp  DrumTab.cpp  FilterTab.cpp  MelodySequencerTab.cpp  ModulationTab.cpp  OscTab.cpp  PluginEditor.cpp  PluginProcessor.cpp  ProgressionTab.cpp  SequencerTab.cpp  SynthTab.cpp
